# sensor-data-analyzer

./: .gitmodules  Cargo.toml  README.md
crates/sensor-data-analyzer/: Cargo.toml
crates/sensor-data-analyzer-cli/: Cargo.toml
crates/sensor-data-analyzer-cli/src/: arguments.rs  main.rs  util.rs
crates/sensor-data-analyzer-cli/src/commands/: associate.rs  clear.rs  download.rs  mod.rs  stats.rs  upload_point_cloud.rs  upload_rosbag.rs
crates/sensor-data-analyzer-core/: Cargo.toml  diesel.toml
crates/sensor-data-analyzer-core/migrations/20220615133237_create_sensor_data/: down.sql  up.sql
crates/sensor-data-analyzer-core/src/: database_manager.rs  database_utils.rs  error.rs  lib.rs  models.rs  rosbag_mesh.rs  schema.rs  sphere.rs
crates/sensor-data-analyzer/src/: lib.rs
other/extended-3dcitydb/: Dockerfile  README.md  sensor-data-schema.sh
