[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.3"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/tum-gis/sensor-data-analyzer"

[workspace.dependencies]
erosbag = { version = "0.0.1-alpha.3" }
epoint = { version = "0.0.1-alpha.3" }
ecoord = { version = "0.0.1-alpha.3" }
emesh = { version = "0.0.1-alpha.3" }
emesh-converter = { version = "0.0.1-alpha.3" }
egraphics = { version = "0.0.1-alpha.3" }

thiserror = "1.0.61"
clap = "4.5.9"
indicatif = "0.17.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = "1.0.204"
serde_json = "1.0.120"
humantime = "2.1.0"
diesel = "~2.1.6"
diesel-async = "~0.4.1"
postgis_diesel = "~2.3.1"
tokio = "1.38.0"
csv = "1.3.0"
postgres = "0.19.7"
nalgebra = "0.33.0"
dotenvy = "0.15.7"
itertools = "0.13.0"
polars = "0.41.3"
ndarray = "0.15"
chrono = "0.4.38"
rayon = "1.10.0"
sysinfo = "0.30.13"
