[package]
name = "sensor-data-analyzer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool for analyzing sensor data by leveraging semantic environment models."


[dependencies]
sensor-data-analyzer-core = { version = "0.0.1-alpha.4", path = "../sensor-data-analyzer-core" }
